correction z-index header

--- a/app/styles/utils/_variables.scss
+++ b/app/styles/utils/_variables.scss
@@ -122,7 +122,7 @@ $layers: (
   sidebar: 4,
   footer: 3,
   toolbar: 2,
-  header:1,
+  header:2,
   disabled:-1,
 );
 
